# pysolve-gn

./: .buildinfo  .bumpver.toml  .gitignore  Makefile  README.md  api.html  genindex.html  index.html  installation.html  math.html  objects.inv  pyproject.toml  search.html  searchindex.js  sg_execution_times.html  usage.html
.doctrees/: api.doctree  index.doctree  installation.doctree  math.doctree  sg_execution_times.doctree  usage.doctree
.doctrees/_autosummary/: pysolvegn.arctan_rho_at_R2.doctree  pysolvegn.build_jacobian.doctree  pysolvegn.build_numerical_jacobian.doctree  pysolvegn.build_soft_squared_regularization.doctree  pysolvegn.build_squared_regularization.doctree  pysolvegn.cauchy_rho_at_R2.doctree  pysolvegn.linear_rho_at_R2.doctree  pysolvegn.soft_l1_rho_at_R2.doctree  (+3 more)
_autosummary/: pysolvegn.arctan_rho_at_R2.html  pysolvegn.build_jacobian.html  pysolvegn.build_numerical_jacobian.html  pysolvegn.build_soft_squared_regularization.html  pysolvegn.build_squared_regularization.html  pysolvegn.cauchy_rho_at_R2.html  pysolvegn.linear_rho_at_R2.html  pysolvegn.perform_Lcurve_analysis.html  pysolvegn.soft_l1_rho_at_R2.html  pysolvegn.solve_gauss_newton.html  pysolvegn.study_jacobian.html
_gallery/: curve_fitting.html  index.html  sg_execution_times.html
_modules/: index.html
_sources/: index.rst.txt  math.rst.txt  sg_execution_times.rst.txt
gallery/: GALLERY_HEADER.rst
pysolve_gn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pysolvegn/: L_curve.py  __init__.py  derivation.py  regularization.py  rho_functions.py  solver.py  study_optimization.py
(+32 files in other folders)
