[build-system]
requires = [
  "setuptools>=42",
  "setuptools-scm>=8.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pysolve-gn"
requires-python = ">= 3.11"
dynamic = ["version"]
description = "Robust Gauss-Newton Least Squares Solver."
license = {file = "LICENSE"}
authors = [
{name = "Artezaru", email = "artezaru.github@proton.me"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.7.0"
]

[project.urls]
Homepage = "https://github.com/Artezaru/pysolve-gn"
Documentation = "https://Artezaru.github.io/pysolve-gn"
Source = "https://github.com/Artezaru/pysolve-gn"
Tracker = "https://github.com/Artezaru/pysolve-gn/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pysolvegn", "pysolvegn*"]
exclude = ["laboratory", "laboratory.*", "tests", "tests*", "examples", "examples*"]

[tool.setuptools.package-data]
"pysolvegn.resources" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "pysolvegn.__version__.__version__"}

[project.readme]
file = "README.md"
content-type = "text/markdown"